plugins {
    id 'com.diffplug.gradle.spotless' apply false
    id 'com.palantir.baseline' apply false
    id 'net.ltgt.errorprone' apply false
    id 'net.ltgt.nullaway' apply false
    id 'org.danilopianini.cpd' apply false
}

subprojects { project ->
    group = 'io.github.joke.percolate'

    repositories {
        mavenCentral()
    }

    pluginManager.apply 'com.palantir.baseline-reproducibility'

    pluginManager.withPlugin('java-base') {
        pluginManager.apply 'com.palantir.baseline-idea'
        pluginManager.apply 'com.palantir.baseline-encoding'
        pluginManager.apply 'com.palantir.baseline-java-compiler-diagnostics'
        pluginManager.apply 'com.palantir.baseline-java-properties'
        pluginManager.apply 'com.diffplug.spotless'
        pluginManager.apply 'net.ltgt.errorprone'
        pluginManager.apply 'jacoco'
        pluginManager.apply 'pmd'
//        pluginManager.apply 'org.danilopianini.cpd'
        // pluginManager.apply 'com.palantir.baseline-format'
        tasks.withType(JavaCompile).configureEach {
            options.release = 11
            options.compilerArgs << '-Werror'
            options.fork = true
            options.forkOptions.jvmArgs += [
                    '--sun-misc-unsafe-memory-access=allow'
            ]
        }
    }

    pluginManager.withPlugin('com.diffplug.spotless') {
        spotless {
            java {
                forbidWildcardImports()
                removeUnusedImports()
                palantirJavaFormat('2.87.0')
            }
        }
    }

    pluginManager.withPlugin('java') {
        pluginManager.apply 'com.palantir.baseline-testing'

        tasks.named('test') {
            useJUnitPlatform {
                includeTags 'unit'
            }
        }

        tasks.register('integrationTest', Test) {
            useJUnitPlatform {
                includeTags 'integration'
            }
            testClassesDirs = sourceSets.test.output.classesDirs
            classpath = sourceSets.test.runtimeClasspath
        }

        tasks.named('check') {
            dependsOn 'integrationTest'
        }
        tasks.withType(Test).configureEach {
            maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
        }    }

    pluginManager.withPlugin('groovy') {
        pluginManager.apply 'codenarc'
        codenarc {
            configFile = file("$rootDir/.codenarc.groovy")
            maxPriority1Violations = 0
            maxPriority2Violations = 0
            maxPriority3Violations = 0
        }
        dependencies {
            codenarc platform(project.project(':dependencies'))
            codenarc 'org.codenarc:CodeNarc'
        }
        tasks.withType(CodeNarc).configureEach {
            reports {
                xml.required = false
                html.required = true
                text.required = true
            }
        }
    }


    pluginManager.withPlugin('jacoco') {
        tasks.withType(JacocoReport).configureEach {
            dependsOn test
            dependsOn tasks.matching { it.name == 'integrationTest' }
            executionData.from fileTree(buildDir).include('jacoco/*.exec')
            reports {
                xml.required = true
            }
        }
        tasks.withType(JacocoCoverageVerification).configureEach {
            violationRules {
                rule {
                    limit {
                        counter = 'BRANCH'
                        value = 'COVEREDRATIO'
                        minimum = 0.6
                    }
                }
            }
        }
        tasks.withType(Test).configureEach {
            finalizedBy jacocoTestReport
        }
        tasks.named('check') {
            dependsOn jacocoTestCoverageVerification
        }
    }

    pluginManager.withPlugin('pmd') {
        pmd {
            consoleOutput = false
            toolVersion = '7.24.0' // keep in sync with below
            rulesMinimumPriority = 5
            ruleSets = ["$rootDir/.pmd.xml"]
        }
    }

//    pluginManager.withPlugin('org.danilopianini.cpd') {
//        cpd {
//            toolVersion = '7.24.0' // keep in sync with above
//        }
//        tasks.named('cpdCheck') {
//            reports {
//                text.required = true
//                xml.required = true
//            }
//        }
//    }

    pluginManager.withPlugin('net.ltgt.errorprone') {
        pluginManager.apply 'net.ltgt.nullaway'
        dependencies {
            errorprone('com.google.errorprone:error_prone_core:2.48.0')
        }
        tasks.withType(JavaCompile).configureEach {
            options.errorprone {
                disableWarningsInGeneratedCode = true
            }
        }
    }

    pluginManager.withPlugin('net.ltgt.nullaway') {
        dependencies {
            errorprone('com.uber.nullaway:nullaway:0.13.1')
        }
        tasks.withType(JavaCompile).configureEach {
            options.errorprone {
                error('RequireExplicitNullMarking')
                nullaway {
                    error()
                    onlyNullMarked = true
                    treatGeneratedAsUnannotated = true
                    jspecifyMode = true
                    suggestSuppressions = true
                    checkContracts = true
                    acknowledgeRestrictiveAnnotations = true
                }
            }
        }
    }
}

wrapper {
    gradleVersion = '9.5.0'
}
